# nddata

./: .gitignore  .travis.yml  CHANGES.rst  LICENSE.rst  README.md  appveyor.yml  setup.cfg
benchmarks/: asv.conf.json
benchmarks/benchmarks/nddata/: nddata.py
benchmarks/benchmarks/utils/: dictutils.py  stats.py
benchmarks_all/: readme.txt
benchmarks_all/utils/: numpyutils.py
docs/: conf.py  copy.rst  index.rst  rtd-pip-requirements
docs/nddata/: collection.rst  decorator.rst  experimental.rst  index.rst  interface.rst  nddata.rst  subclassing.rst  utils.rst
docs/nddata/mixins/: index.rst  ndarithmetic.rst  ndclip.rst  ndfilter.rst  ndio.rst  ndplotting.rst  ndreduce.rst  ndreshape.rst  ndslicing.rst  ndstats.rst  ndunitconversion.rst
docs/nddata/nddata/: index.rst
docs/nddata/utils/: index.rst
docs/utils/: index.rst
nddata/: __init__.py  conftest.py  deps.py
nddata/nddata/: __init__.py  classes.py  compat.py  contexts.py  decorators.py  descriptors.py  exceptions.py  flag_collection.py  nddata.py  nddata_base.py  nddata_collection.py  nddata_withmixins.py  nduncertainty.py  nduncertainty_converter.py  nduncertainty_relstd.py  nduncertainty_stddev.py  nduncertainty_unknown.py  nduncertainty_var.py  utils.py
nddata/nddata/exceptions/: uncertainty.py
nddata/nddata/meta/: __init__.py  (+2 more)
nddata/utils/: __init__.py  console.py  contextmanager.py  copyutils.py  decorators.py  descriptors.py  dictutils.py  extraction.py  garbagecollector.py  inputvalidation.py  itertools_recipes.py  numbautils.py  numpy.py  numpyutils.py  sentinels.py  stats.py  wcs.py
(+61 files in other folders)
