[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = nddata
description = Astropy affiliated package extending NDData
long_description = This is a package implementing an extension to the NDData interface
author = Michael Seifert
author_email = michaelseifert04@yahoo.de
license = BSD
url = https://github.com/MSeifert04/nddata
edit_on_github = False
github_project = MSeifert04/nddata

[entry_points]
astropy-package-template-example = nddata.example_mod:main